# fastapi_base

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
config/: project_config.py
config/database/: db_config.py  db_helper.py
examples/app_support_2/: main.py  requirements.txt
examples/app_support_2/src/: routes.py
examples/app_support_2/src/config/database/: db_helper.py
examples/app_support_2/src/mock/: auth_api.py
examples/app_support_2/src/services/: base_service.py
examples/app_support_2/src/support/controllers/: admin_controller.py  support_controller.py
examples/app_support_2/src/support/repositories/: category_repository.py  support_repository.py
examples/app_support_2/src/support/services/: category_service.py  support_services.py
migrations/: base.py  env.py
migrations/versions/: 2025_01_17_1100-482e5a25b1ef_migration_title.py
src/interfaces/: permission_interface.py
src/models/: base_model.py
src/repositories/: base_uow.py  sqlalchemy_repository.py
src/services/: base_service.py  generic_service.py  query_base_service.py
