[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Kuleshov Vitaliy <flashvita@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry = "^2.0"
pre-commit = "^4.0.1"
fastapi = "^0.115.7"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "^1.14.1"
pydantic-settings = "^2.0.3"
isort = "^5.13.2"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"